changed button color to red

--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
 
         button {
             padding: 8px 16px;
-            background-color: #007bff;
+            background-color: red;
             color: white;
             border: none;
             border-radius: 4px;
