--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
 
         button {
             padding: 8px 16px;
-            background-color: red;
+            background-color: yellow;
             color: white;
             border: none;
             border-radius: 4px;
