changed button color to blue

--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
 
         button {
             padding: 8px 16px;
-            background-color: yellow;
+            background-color: #007bff;
             color: white;
             border: none;
             border-radius: 4px;
@@ -245,10 +245,8 @@
     }
 }
     </style>
-    
 </head>
 <body>
-    <script src="main.js"></script>
     <div class="container">
         <div class="channel-section">
             <h2>Clifton Family AI</h2>
@@ -271,6 +269,6 @@
         <div id="output"></div>
     </div>
 
-   
+    <script src="main.js"></script>
 </body>
 </html>
