--- a/home.html
+++ b/home.html
@@ -269,6 +269,6 @@
         <div id="output"></div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="/static/main.js"></script>
 </body>
 </html>
