--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clifton Family AI</title>
+    <script src="static/main.js" defer></script>
     <style>
         body {
             font-family: Georgia, serif;
@@ -245,6 +246,7 @@
     }
 }
     </style>
+
 </head>
 <body>
     <div class="container">
@@ -269,6 +271,6 @@
         <div id="output"></div>
     </div>
 
-    <script src="static/main.js"></script>
+    
 </body>
 </html>
