--- a/SpeechToText/index.html
+++ b/SpeechToText/index.html
@@ -10,7 +10,13 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <div class="logo">
+            <a href="../portfolio.html#projects" class="back-button" style="display: flex; align-items: center; gap: 0.5rem; color: #64748b; text-decoration: none; font-size: 0.875rem; font-weight: 500; padding: 0.5rem 1rem; border-radius: 0.5rem; transition: all 0.2s; position: absolute; left: 1rem;" onmouseover="this.style.color='#3b82f6'; this.style.background='#f8fafc';" onmouseout="this.style.color='#64748b'; this.style.background='transparent';">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="15 18 9 12 15 6"/>
+                </svg>
+                <span>Back to Portfolio</span>
+            </a>
+            <div class="logo" style="margin: 0 auto;">
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 1C8.13 1 5 4.13 5 8C5 11.87 8.13 15 12 15C15.87 15 19 11.87 19 8C19 4.13 15.87 1 12 1ZM12 13C9.24 13 7 10.76 7 8C7 5.24 9.24 3 12 3C14.76 3 17 5.24 17 8C17 10.76 14.76 13 12 13Z" fill="currentColor"/>
                     <path d="M12 16C8.67 16 6 18.67 6 22H18C18 18.67 15.33 16 12 16Z" fill="currentColor"/>
