commiting before pushing

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header class="app-header">
         <div class="header-content">
-            <a href="portfolio.html#projects" class="back-button" aria-label="Back to portfolio">
+            <a href="index.html#projects" class="back-button" aria-label="Back to portfolio">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <polyline points="15 18 9 12 15 6"/>
                 </svg>
