--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                  </p>
              </div>
             
+             
             <div class="projects-grid">
                 <div class="project-card featured">
                     <div class="project-header">
@@ -356,6 +357,10 @@
             <h2 class="section-title">Certifications</h2>
             <div class="certifications-gallery">
                 <div class="cert-display-area" data-cert="Sage X3">
+                    <img src="aws_solutions_2026.jpg" alt="AWS Solutions Architect Certification" class="cert-image" data-src="aws_solutions_2026.jpg">
+                    <div class="cert-label">Sage X3</div>
+                </div>
+                <div class="cert-display-area" data-cert="Sage X3">
                     <img src="SageX3_Certification.PNG" alt="Sage X3 Certification" class="cert-image" data-src="SageX3_Certification.PNG">
                     <div class="cert-label">Sage X3</div>
                 </div>
@@ -452,6 +457,13 @@
             <div class="certifications">
                 <h3 class="certifications-title">Certifications</h3>
                 <div class="cert-grid">
+                    <div class="cert-item">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                            <polyline points="22 4 12 14.01 9 11.01"/>
+                        </svg>
+                        <span>Udemy - AWS Solutions Architect</span>
+                    </div>
                     <div class="cert-item">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
